--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ bezkoder:
     prod-url: http://172.22.8.5
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/teaching_research
+    url: jdbc:mysql://172.22.8.5:3306/teaching_research
     username: minhdunk
     password: dangminh49
     driver-class-name: com.mysql.cj.jdbc.Driver
