--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Build on DockerHub and Deploy to home server
 on:
   push:
     branches:
-      - develop
+      - master
 env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -72,11 +72,11 @@ jobs:
         password: ${{ env.DOCKERHUB_TOKEN }}
     - name: Pull Docker image
       run: |
-        echo "${{ env.SSH_PASSWORD }}" | ssh -S -o StrictHostKeyChecking=no ${{ env.SSH_USERNAME }}@172.22.8.5 'sudo docker pull monkeydminh49/quiz-api:latest'
+        echo "${{ env.SSH_PASSWORD }}" | ssh -o StrictHostKeyChecking=no -S ${{ env.SSH_USERNAME }}@172.22.8.5 'sudo docker pull monkeydminh49/quiz-api:latest'
     - name: Stop running container
       run: |
-        echo "${{ env.SSH_PASSWORD }}" | ssh -S -o StrictHostKeyChecking=no ${{ env.SSH_USERNAME }}@172.22.8.5 'sudo docker stop research-api || true'
-        echo "${{ env.SSH_PASSWORD }}" | ssh -S -o StrictHostKeyChecking=no ${{ env.SSH_USERNAME }}@172.22.8.5 'sudo docker rm research-api || true'
+        echo "${{ env.SSH_PASSWORD }}" | ssh -S -o StrictHostKeyChecking=no -S ${{ env.SSH_USERNAME }}@172.22.8.5 'sudo docker stop research-api || true'
+        echo "${{ env.SSH_PASSWORD }}" | ssh -S -o StrictHostKeyChecking=no -S ${{ env.SSH_USERNAME }}@172.22.8.5 'sudo docker rm research-api || true'
     - name: Run new container
       run: |
-        echo "${{ env.SSH_PASSWORD }}" | ssh -S -o StrictHostKeyChecking=no ${{ env.SSH_USERNAME }}@172.22.8.5 'sudo docker run -d --name research-api -e SPRING_DATASOURCE_USERNAME='${{ secrets.SPRING_DATASOURCE_USERNAME }}' -e SPRING_DATASOURCE_PASSWORD='${{ secrets.SPRING_DATASOURCE_PASSWORD }}' -p 80:8080 monkeydminh49/quiz-api:latest'
+        echo "${{ env.SSH_PASSWORD }}" | ssh -S -o StrictHostKeyChecking=no -S ${{ env.SSH_USERNAME }}@172.22.8.5 'sudo docker run -d --name research-api -e SPRING_DATASOURCE_USERNAME='${{ secrets.SPRING_DATASOURCE_USERNAME }}' -e SPRING_DATASOURCE_PASSWORD='${{ secrets.SPRING_DATASOURCE_PASSWORD }}' -p 80:8080 monkeydminh49/quiz-api:latest'
