--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,11 @@
 			<artifactId>mapstruct-processor</artifactId>
 			<version>${mapstruct.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20231013</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
