--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     url: jdbc:h2://mem:db;DB_CLOSE_DELAY=-1
     username: sa
-    password: sa
+    password:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
