--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     url: jdbc:h2://mem:db;DB_CLOSE_DELAY=-1
     username: sa
     password:
-    driver-class-name: org.h2.Driver
+    driver-class-name:
   jpa:
     hibernate:
       ddl-auto: create-drop
