--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show_sql: true
+    show_sql: false
     properties:
       hibernate:
         format_sql: true
