--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,10 +6,11 @@ on:
 env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-  ZEROTIER_NETWORK_ID: ${{ secrets.ZEROTIER_NETWORK_ID }}
-  ZEROTIER_CENTRAL_TOKEN: ${{ secrets.ZEROTIER_CENTRAL_TOKEN }}
+#  ZEROTIER_NETWORK_ID: ${{ secrets.ZEROTIER_NETWORK_ID }}
+#  ZEROTIER_CENTRAL_TOKEN: ${{ secrets.ZEROTIER_CENTRAL_TOKEN }}
   SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
   SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+  HOST_IP_ADDRESS: ${{ secrets.HOST_IP_ADDRESS }}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -53,11 +54,11 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: ZeroTier
-      uses: zerotier/github-action@v1.0.1
-      with:
-        network_id: ${{ env.ZEROTIER_NETWORK_ID }}
-        auth_token: ${{ env.ZEROTIER_CENTRAL_TOKEN }}
+#    - name: ZeroTier
+#      uses: zerotier/github-action@v1.0.1
+#      with:
+#        network_id: ${{ env.ZEROTIER_NETWORK_ID }}
+#        auth_token: ${{ env.ZEROTIER_CENTRAL_TOKEN }}
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
@@ -67,7 +68,7 @@ jobs:
     - name: Executing remote ssh commands using password
       uses: appleboy/ssh-action@v1.0.3
       with:
-        host: 172.22.0.0
+        host: ${{ env.HOST_IP_ADDRESS }}
         username: ${{ env.SSH_USERNAME }}
         password: ${{ env.SSH_PASSWORD }}
         port: 22
@@ -75,7 +76,7 @@ jobs:
           echo ${{ env.SSH_PASSWORD }} | sudo -S docker pull monkeydminh49/research-api:latest
           echo ${{ env.SSH_PASSWORD }} | sudo -S docker stop research-api || true
           echo ${{ env.SSH_PASSWORD }} | sudo -S docker rm research-api || true
-          echo ${{ env.SSH_PASSWORD }} | sudo -S docker run -d --name research-api -p 80:8080 monkeydminh49/research-api:latest
+          echo ${{ env.SSH_PASSWORD }} | sudo -S docker run -d --name research-api -p 10049:8080 monkeydminh49/research-api:latest
           
     # - name: Pull Docker image
     #   run: |
