--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,8 +4,8 @@ bezkoder:
     prod-url: http://172.22.0.0
 spring:
   datasource:
-    url: jdbc:postgresql://172.22.0.0:5432/teaching_research
-    username: postgres
+    url: jdbc:postgresql://localhost:2003/teaching_research
+    username: minhdunk
     password: dangminh49
     driver-class-name: org.postgresql.Driver
   jpa:
