--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Port forwarding
-        run: echo ${{ env.SSH_PASSWORD }} | ssh -f -N -L 2003:localhost:2003 ${{ secrets.SSH_USERNAME }}@${{ secrets.HOST_IP_ADDRESS }}
+        run: echo ${{ env.SSH_PASSWORD }} | ssh -o StrictHostKeyChecking=no -f -N -L 2003:localhost:2003 ${{ secrets.SSH_USERNAME }}@${{ secrets.HOST_IP_ADDRESS }}
 
 
       - name: Set up JDK 21
