--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -64,7 +64,8 @@ jobs:
         target: "/home/proptit/dangminh/"
         script: |
           cd /home/proptit/dangminh
-          docker compose -f docker-compose.yaml up -d
+          docker compose up
+#          docker compose -f docker-compose.yaml up -d
 #        script: |
 #          echo ${{ env.SSH_PASSWORD }} | sudo -S docker pull monkeydminh49/research-api:latest
 #          echo ${{ env.SSH_PASSWORD }} | sudo -S docker stop research-api || true
