--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -53,6 +53,16 @@ jobs:
         username: ${{ env.DOCKERHUB_USERNAME }}
         password: ${{ env.DOCKERHUB_TOKEN }}
 
+    - name: copy file via ssh password
+      uses: appleboy/scp-action@v0.1.7
+      with:
+        host: ${{ env.HOST_IP_ADDRESS }}
+        username: ${{ env.SSH_USERNAME }}
+        password: ${{ env.SSH_PASSWORD }}
+        port: 22
+        source: "./docker-compose.yml"
+        target: "/home/proptit/dangminh/"
+
     - name: Executing remote ssh commands using password
       uses: appleboy/ssh-action@v1.0.3
       with:
@@ -64,6 +74,8 @@ jobs:
         target: "/home/proptit/dangminh/"
         script: |
           cd /home/proptit/dangminh
+          docker-compose down || true  
+          docker-compose pull          
           docker-compose up -d
 #          docker compose -f docker-compose.yaml up -d
 #        script: |
