--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,14 +2,20 @@ version: '3'
 services:
   postgres:
     image: postgres
+    container_name: dangminh-db
+    ports:
+      - "2003:5432"
     environment:
       POSTGRES_USER: minhdunk
       POSTGRES_PASSWORD: dangminh49
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
     networks:
       - my_network
 
   spring-boot-app:
     image: monkeydminh49/research-api:latest
+    container_name: research-api
     ports:
       - "10049:8080"
     environment:
