--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -60,7 +60,7 @@ jobs:
         username: ${{ env.SSH_USERNAME }}
         password: ${{ env.SSH_PASSWORD }}
         port: 22
-        source: "./docker-compose.yml"
+        source: "./docker-compose.yaml"
         target: "/home/proptit/dangminh/"
 
     - name: Executing remote ssh commands using password
