--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,7 +37,7 @@ jobs:
           dockerfile: ./Dockerfile
           tags: monkeydminh49/research-api:latest
   deploy:
-#    needs: build
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
