--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
     ports:
       - "10049:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://dangminh-db:2003/postgres
+      SPRING_DATASOURCE_URL: jdbc:postgresql://118.140.229.222:2003/postgres
       SPRING_DATASOURCE_USERNAME: minhdunk
       SPRING_DATASOURCE_PASSWORD: dangminh49
     depends_on:
