--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,41 +1,41 @@
-#name: Build on DockerHub and Deploy to home server
-#on:
-#  push:
-#    branches:
-#      - develop
-#env:
-#  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-#  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-##  ZEROTIER_NETWORK_ID: ${{ secrets.ZEROTIER_NETWORK_ID }}
-##  ZEROTIER_CENTRAL_TOKEN: ${{ secrets.ZEROTIER_CENTRAL_TOKEN }}
-#  SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
-#  SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
-#  HOST_IP_ADDRESS: ${{ secrets.HOST_IP_ADDRESS }}
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-##      - name: Set up JDK 21
-##        uses: actions/setup-java@v3
-##        with:
-##          java-version: '21'
-##          distribution: 'adopt'
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v1
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v1
+name: Build on DockerHub and Deploy to home server
+on:
+  push:
+    branches:
+      - develop
+env:
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+#  ZEROTIER_NETWORK_ID: ${{ secrets.ZEROTIER_NETWORK_ID }}
+#  ZEROTIER_CENTRAL_TOKEN: ${{ secrets.ZEROTIER_CENTRAL_TOKEN }}
+  SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
+  SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+  HOST_IP_ADDRESS: ${{ secrets.HOST_IP_ADDRESS }}
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+#      - name: Set up JDK 21
+#        uses: actions/setup-java@v3
 #        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#      - name: Build and push Docker image
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: ./
-#          push: true
-#          dockerfile: ./Dockerfile
-#          tags: monkeydminh49/research-api:1.0
+#          java-version: '21'
+#          distribution: 'adopt'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          push: true
+          dockerfile: ./Dockerfile
+          tags: monkeydminh49/research-api:1.0
 #  deploy:
 #    needs: build
 #    runs-on: ubuntu-latest
