--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 bezkoder:
   openapi:
     dev-url: http://localhost:8080
-    prod-url: http://localhost:10049
+    prod-url: http://www.minhupro.xyz
 spring:
   datasource:
     url: ${SPRING_DATASOURCE_URL}
