--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,8 +21,8 @@ spring:
     name: TeachingResearch
   servlet:
     multipart:
-      max-file-size: 200MB
-      max-request-size: 200MB
+      max-file-size: 2GB
+      max-request-size: 2GB
   mail:
     properties:
       mail:
